fix spacing mobile

--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -2,6 +2,9 @@
     > *
         padding-bottom: 8rem
         padding-top: 4rem
+        @include media-breakpoint-down(md)
+            padding-bottom: 3rem
+            padding-top: 1rem
 
     &-chapo
         .container
